pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod2
  labels:
    app: frontend
spec:
  containers:
  - name: mynginx
    image: nginx:1.16
    ports:
    - containerPort: 80
