sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysts
spec:
  serviceName: mysvc
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: mynginx
        image: nginx
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: myvolume
  volumeClaimTemplates:
  - metadata:
      name: myvolume
    spec:
      storageClassName: manual
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10M
