nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  selector:
    app: nginx
  externalIPs:
  - 192.168.57.50
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        kubernetes.io/change-cause: "service with external IP"
    spec:
      containers:
      - name: mynginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: myvolume
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: myvolume
        persistentVolumeClaim:
          claimName: mypvc
