ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myingress
spec:
  rules:
  - host: myingresstest.org
    http:
      paths:
      - path: /test
        backend:
          serviceName: mysvc
          servicePort: 80
